@startuml
hide empty description

[*] --> IDEL : SagaStartedEvent

IDEL --> PARTIALLY_ACTIVE : TxStartedEvent

IDEL --> SUSPENDED : SagaEndedEvent

IDEL --> SUSPENDED : SagaAbortedEvent

PARTIALLY_COMMITTED --> COMMITTED : SagaEndedEvent

PARTIALLY_COMMITTED --> PARTIALLY_ACTIVE : TxStartedEvent

PARTIALLY_COMMITTED --> FAILED : SagaAbortedEvent

PARTIALLY_ACTIVE --> PARTIALLY_COMMITTED : TxEndedEvent

PARTIALLY_ACTIVE --> FAILED : TxAbortedEvent

PARTIALLY_ACTIVE --> SUSPENDED : TxTimeoutEvent

PARTIALLY_ACTIVE --> SUSPENDED : SagaTimeoutEvent

SUSPENDED --> SUSPENDED : SagaTimeoutEvent

FAILED --> COMPENSATED : SagaAbortedEvent( or timout)

FAILED --> FAILED : TxComponsited

COMPENSATED --> [*]

COMMITTED --> [*]

SUSPENDED --> [*]

PARTIALLY_COMMITTED : update tx state

PARTIALLY_ACTIVE : new tx state

FAILED : while committed txs {\n    do compensate\n}


@enduml
